use custom vh variable to fix banner height on mobile

--- a/src/components/Intro/Intro.styles.scss
+++ b/src/components/Intro/Intro.styles.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   height: calc(100vh - 3rem);
+  height: calc(var(--vh, 1vh) * 100 - 3rem);
   padding: var(--spacing-16) var(--spacing-8);
   background: linear-gradient(
     180deg,
